[gd_scene load_steps=42 format=3 uid="uid://d0ubsiaw5wkmv"]

[ext_resource type="Script" path="res://Script/map.gd" id="1_d7hc1"]
[ext_resource type="Material" uid="uid://n0cqjc18mar0" path="res://shader/shake.tres" id="2_fuvoy"]
[ext_resource type="Texture2D" uid="uid://dv8nudbwsgeh2" path="res://panoramas2/洞穴2.jpg" id="3_u6gy3"]
[ext_resource type="Texture2D" uid="uid://dc0um4nhs4bni" path="res://panoramas2/洞穴2_2.png" id="4_d2e6a"]
[ext_resource type="PackedScene" uid="uid://b3dtk2snxdgij" path="res://Scene/player.tscn" id="5_4yfgo"]
[ext_resource type="PackedScene" uid="uid://dvh00u3eljhxv" path="res://Scene/reward.tscn" id="7_u76ey"]
[ext_resource type="Texture2D" uid="uid://klncldkpxbst" path="res://梦魂Animation/circle.png" id="8_jstoh"]
[ext_resource type="AudioStream" uid="uid://qvprmxblk0r6" path="res://Audio/BGM/#子母河.mp3" id="8_m8285"]
[ext_resource type="AudioStream" uid="uid://bwt1iemoxp8ai" path="res://Audio/SE/SWD 战斗开始.mp3" id="9_wnplm"]
[ext_resource type="Texture2D" uid="uid://dnmi653uf1d0y" path="res://Pictures/@《神迹》电影式对话.png" id="10_dgd3w"]
[ext_resource type="AudioStream" uid="uid://7d6auv5upl7p" path="res://Audio/BGM/轩辕-鬼域.mp3" id="11_wn4jd"]
[ext_resource type="PackedScene" uid="uid://csr2bo6lfee2s" path="res://Scene/teleport.tscn" id="12_p6g7g"]
[ext_resource type="AudioStream" uid="uid://du6dhdf3m3kkr" path="res://Audio/SE/男-剑.ogg" id="13_2uhmi"]
[ext_resource type="PackedScene" uid="uid://b426qjra4bj27" path="res://Scene/potentialBall.tscn" id="14_0sbip"]
[ext_resource type="PackedScene" uid="uid://5rdlt34b6d4g" path="res://Scene/menu.tscn" id="15_fmiyx"]
[ext_resource type="PackedScene" uid="uid://b7m0e2bvanxoi" path="res://canvas_layer.tscn" id="16_f2pal"]
[ext_resource type="Script" path="res://Script/mapCollider.gd" id="17_kr2rj"]
[ext_resource type="Shader" path="res://shader/sandStorm.gdshader" id="18_jn0jd"]
[ext_resource type="Texture2D" uid="uid://dx1uhpydba5uk" path="res://梦魂Animation/四法青云.png" id="19_ltwp7"]
[ext_resource type="PackedScene" uid="uid://ymede6kvxndj" path="res://Scene/npc.tscn" id="20_e3uhp"]
[ext_resource type="Script" path="res://Script/地图刮刮乐.gd" id="22_5g75p"]
[ext_resource type="PackedScene" uid="uid://dr0073xj0ml3r" path="res://Scene/triggerplace.tscn" id="22_f14qk"]
[ext_resource type="Texture2D" uid="uid://dcylqtkijy35y" path="res://panoramas2/江南野外.jpg" id="23_dhkur"]
[ext_resource type="Script" path="res://Script/fallOff.gd" id="24_r5ov7"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_su7y6"]
vertices = PackedVector2Array(26, 1188, 17, 63, 4289, 54, 1949, 2661, 175, 2619, 20, 1489)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(0, 4, 5)])
outlines = Array[PackedVector2Array]([PackedVector2Array(17, 63, 26, 1188, 20, 1489, 175, 2619, 1949, 2661, 4289, 54)])

[sub_resource type="Gradient" id="Gradient_yuuuf"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4br6b"]
gradient = SubResource("Gradient_yuuuf")
fill = 1
fill_from = Vector2(1, 0.612536)

[sub_resource type="Animation" id="Animation_m3pvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5ro7l"]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(50, 0), Vector2(0, 0), Vector2(-50, 0), Vector2(0, 0), Vector2(50, 0), Vector2(0, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j25iq"]
_data = {
"RESET": SubResource("Animation_m3pvt"),
"shake": SubResource("Animation_5ro7l")
}

[sub_resource type="Animation" id="Animation_wd1ow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_eg635"]
resource_name = "shake"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(-200, 0), Vector2(200, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0wtib"]
resource_name = "turnDark"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("messageLayer/练剑1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("messageLayer/练剑2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("messageLayer/给水:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 10.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("messageLayer/金刚经:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 15.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_4arab"]
resource_name = "坠落"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}

[sub_resource type="Animation" id="Animation_g8nsq"]
resource_name = "移动主角"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2800, 448), Vector2(2106, 898)]
}

[sub_resource type="Animation" id="Animation_fa28m"]
resource_name = "解除误会"

[sub_resource type="Animation" id="Animation_15bs8"]
resource_name = "金箍棒"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("金箍棒:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2704, 503), Vector2(1973, 877)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("金箍棒:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.93058]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("金箍棒:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3778"]
_data = {
"RESET": SubResource("Animation_wd1ow"),
"shake": SubResource("Animation_eg635"),
"turnDark": SubResource("Animation_0wtib"),
"坠落": SubResource("Animation_4arab"),
"移动主角": SubResource("Animation_g8nsq"),
"解除误会": SubResource("Animation_fa28m"),
"金箍棒": SubResource("Animation_15bs8")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ijbly"]
shader = ExtResource("18_jn0jd")
shader_parameter/sand_color = Color(0.76, 0.69, 0.5, 1)
shader_parameter/dust_color = Color(0.82, 0.78, 0.65, 1)
shader_parameter/storm_speed = 2.0
shader_parameter/storm_strength = 1.0
shader_parameter/storm_density = 2.0
shader_parameter/turbulence = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydwwp"]
size = Vector2(205, 179.832)

[sub_resource type="SpriteFrames" id="SpriteFrames_gjs4m"]

[node name="幻境3" type="Node2D"]
script = ExtResource("1_d7hc1")
shader = ExtResource("2_fuvoy")

[node name="建业左" type="Sprite2D" parent="."]
position = Vector2(2855, 911)
texture = ExtResource("3_u6gy3")
offset = Vector2(-2153, -82)

[node name="shadow" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(702, 829)
texture = ExtResource("4_d2e6a")

[node name="Node2D" type="TextureRect" parent="."]
offset_left = -48.0
offset_top = 104.0
offset_right = -48.0
offset_bottom = 104.0
script = ExtResource("22_5g75p")
cover_texture = ExtResource("23_dhkur")

[node name="player" parent="." instance=ExtResource("5_4yfgo")]
z_index = 1
position = Vector2(67, 1318)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" parent="player" index="1"]
animation = &"down"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="player"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1301, 873)
stream = ExtResource("8_m8285")
volume_db = 4.414
max_distance = 1e+07
metadata/_edit_group_ = true

[node name="enterFightCd" type="Timer" parent="."]
one_shot = true

[node name="canFullTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="subSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 7.0
max_distance = 10000.0

[node name="BattleReward" parent="." instance=ExtResource("7_u76ey")]

[node name="battleRewardGone" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
position = Vector2(-369, -502)
navigation_polygon = SubResource("NavigationPolygon_su7y6")
constrain_avoidance = true

[node name="Circle" type="Sprite2D" parent="."]
visible = false
position = Vector2(332.128, 1271.12)
scale = Vector2(0.0631201, 0.0198038)
texture = ExtResource("8_jstoh")

[node name="circleTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="enterFightSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_wnplm")
volume_db = 6.0
max_distance = 100000.0

[node name="position" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(1710, 2018)
energy = 1.24
texture = SubResource("GradientTexture2D_4br6b")
texture_scale = 2.89

[node name="canPress" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="blackSide" type="TextureRect" parent="CanvasLayer2"]
offset_right = 1152.0
offset_bottom = 804.0
texture = ExtResource("10_dgd3w")

[node name="addChild" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MarkerLeft" type="Marker2D" parent="."]
position = Vector2(-45, 267)

[node name="MarkerRight" type="Marker2D" parent="."]
position = Vector2(1451, 1390)

[node name="nightBgm" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1922, 1097)
stream = ExtResource("11_wn4jd")
volume_db = 2.432
max_distance = 1e+06

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
color = Color(0.168627, 0.168627, 0.168627, 1)
energy = 5.0
blend_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(603, 488)
zoom = Vector2(0.1, 0.1)

[node name="addNumTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="npcs" type="Node2D" parent="."]

[node name="AnimatedSprite2D" parent="." instance=ExtResource("12_p6g7g")]
position = Vector2(127, 2229)
toScene = "东海海道3"

[node name="battleBgm" type="AudioStreamPlayer" parent="."]

[node name="oneTimeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_2uhmi")
volume_db = 4.552

[node name="potentialBall" parent="." instance=ExtResource("14_0sbip")]
position = Vector2(3701, -170)
id = "方寸山1"

[node name="shake" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j25iq")
}

[node name="backgroundSoundEffect" type="AudioStreamPlayer2D" parent="."]
volume_db = -34.923
max_distance = 99999.0

[node name="cloudTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="menuControl" parent="." instance=ExtResource("15_fmiyx")]

[node name="CanvasLayer" parent="." instance=ExtResource("16_f2pal")]

[node name="teleportCircle2" parent="." instance=ExtResource("12_p6g7g")]
position = Vector2(-1669, -395)
rotation = -0.0891907
toScene = "雷音寺"

[node name="teleportCircle3" parent="." instance=ExtResource("12_p6g7g")]
position = Vector2(146, 21)
toScene = "神使宫殿"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n3778")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource("17_kr2rj")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
build_mode = 1
polygon = PackedVector2Array(1096, 862, 894, 786, 666, 838, 464, 974, 204, 864, 566, 696, 566, 648, 394, 572, 220, 644, 124, 532, 130, 470, -34, 404, -48, 296, 4, 264, 106, 260, 136, 314, 274, 360, 310, 408, 442, 448, 638, 588, 740, 594, 1046, 408, 1312, 496, 1056, 632, 1196, 824, 1304, 754, 1927, 1474, 1927, 1474, 776, 1659, -398, 1474, -141, 922, 447, 970, 471, 970, 465, 976)

[node name="battleFieldLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 100
material = SubResource("ShaderMaterial_ijbly")
offset_left = -1918.0
offset_top = -574.0
offset_right = 1155.0
offset_bottom = 1988.0
scale = Vector2(2.70884, 1.81542)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
z_index = 100
material = SubResource("ShaderMaterial_ijbly")
offset_left = 3863.0
offset_top = 2069.0
offset_right = 6014.0
offset_bottom = 4360.0
rotation = 3.13083
scale = Vector2(2.70884, 1.81542)

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
z_index = 100
material = SubResource("ShaderMaterial_ijbly")
offset_left = 5066.0
offset_top = 4264.0
offset_right = 7652.0
offset_bottom = 7771.0
rotation = 3.13083
scale = Vector2(2.70884, 1.81542)

[node name="ColorRect4" type="ColorRect" parent="."]
visible = false
z_index = 100
material = SubResource("ShaderMaterial_ijbly")
offset_left = 4865.0
offset_top = 2331.0
offset_right = 7451.0
offset_bottom = 5838.0
rotation = 3.13083
scale = Vector2(2.70884, 1.81542)

[node name="ColorRect5" type="ColorRect" parent="."]
visible = false
z_index = 100
material = SubResource("ShaderMaterial_ijbly")
offset_left = 1767.0
offset_top = 3843.0
offset_right = 4353.0
offset_bottom = 7350.0
rotation = 3.13083
scale = Vector2(2.70884, 1.81542)

[node name="ColorRect6" type="ColorRect" parent="."]
visible = false
z_index = 100
material = SubResource("ShaderMaterial_ijbly")
offset_left = 3409.0
offset_top = 2421.0
offset_right = 5995.0
offset_bottom = 5928.0
rotation = 3.13083
scale = Vector2(2.70884, 1.81542)

[node name="teleportCircle" parent="." instance=ExtResource("12_p6g7g")]
position = Vector2(-11, 287)

[node name="四法青云" type="Sprite2D" parent="."]
position = Vector2(-2143, -41)
rotation = -2.37348
scale = Vector2(2.07682, 2.07682)
texture = ExtResource("19_ltwp7")

[node name="幻境3" parent="." instance=ExtResource("22_f14qk")]
visible = false
position = Vector2(16, 288)
triggerEvent = "幻境3"

[node name="CollisionShape2D" parent="幻境3/Area2D" index="0"]
position = Vector2(34.5254, 33.5)
shape = SubResource("RectangleShape2D_ydwwp")

[node name="npc" parent="." instance=ExtResource("20_e3uhp")]
position = Vector2(-358, 382)
sprite_frames = SubResource("SpriteFrames_gjs4m")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("24_r5ov7")

[node name="fallTimer" type="Timer" parent="Area2D"]
wait_time = 1.3
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-35, 983, -25, 1270, 101, 1192, 188, 1224, 290, 1256, 356, 1223, 592, 1188, 710, 1206, 772, 1217, 880, 1211, 917, 1246, 926, 1244, 927, 1228, 971, 1191, 1057, 1116, 1045, 1045, 1120, 999, 1155, 968, 1107, 880, 887, 971)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(483, 1333, 622, 1330, 727, 1372, 803, 1371, 810, 1332, 902, 1359, 952, 1377, 1049, 1357, 1129, 1359, 1164, 1322, 1122, 1260, 1188, 1219, 1236, 1185, 1263, 1137, 1234, 1112, 1231, 1092, 1300, 1086, 1331, 1046, 1378, 1023, 1429, 992, 1414, 919, 1356, 909, 1248, 816, 1440, 807, 1478, 1121, 1238, 1459, 490, 1443, 551, 1363)

[connection signal="timeout" from="enterFightCd" to="." method="_on_enter_fight_cd_timeout" flags=18]
[connection signal="timeout" from="canFullTimer" to="." method="_on_can_full_timer_timeout" flags=18]
[connection signal="timeout" from="battleRewardGone" to="." method="_on_battle_reward_gone_timeout" flags=18]
[connection signal="timeout" from="circleTimer" to="." method="_on_circle_timer_timeout" flags=18]
[connection signal="timeout" from="canPress" to="." method="_on_can_press_timeout" flags=18]
[connection signal="timeout" from="Timer" to="player" method="_on_timer_timeout" flags=18]
[connection signal="timeout" from="addNumTimer" to="." method="_on_add_num_timer_timeout" flags=18]
[connection signal="timeout" from="cloudTimer" to="." method="_on_cloud_timer_timeout" flags=18]
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="timeout" from="Area2D/fallTimer" to="Area2D" method="_on_fall_timer_timeout"]

[editable path="player"]
[editable path="幻境3"]
